--- a/barberia.html
+++ b/barberia.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="caja">
-            <h1><img src="../banner/logo.png" alt="Logo"></h1>
+            <h1><img src="../HTML y CSS PT1/banner/logo.png" alt="Logo"></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -27,19 +27,19 @@
         <ul class="productos">
             <li>
                 <h2>Cabello</h2>
-                <img src="../banner/cabello.jpg" alt="">
+                <img src="../HTML y CSS PT1/banner/cabello.jpg" alt="">
                 <p class="producto-descripcion">Con tijera o máquina, a gusto del cliente</p>
                 <p class="producto-precio">$ 10.00</p>
                 </li>
             <li>
                 <h2>Barba</h2>
-                <img src="../banner/barba.jpg" alt="">
+                <img src="../HTML y CSS PT1/banner/barba.jpg" alt="">
                 <p class="producto-descripcion">Corte y diseño profesional de barba</p>
                 <p class="producto-precio">$ 8.00</p>
                 </li>
             <li>
                 <h2>Cabello + Barba</h2>
-                <img src="../banner/cabello+barba.jpg" alt="">
+                <img src="../HTML y CSS PT1/banner/cabello+barba.jpg" alt="">
                 <p class="producto-descripcion">Paquete completo de cabello y barba</p>
                 <p class="producto-precio">$ 15.00</p>
                 </li>
@@ -47,7 +47,7 @@
     </main>
 
     <footer>
-        <img class="pie-de-pagina" src="../banner/logo-blanco.png" alt="">
+        <img class="pie-de-pagina" src="../HTML y CSS PT1/banner/logo-blanco.png" alt="">
         <p class="copyright">&copy Copyright Barbería Alura-2022</p>
     </footer>
 </body>
