--- a/contaco.html
+++ b/contaco.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="caja">
-            <h1><img src="../banner/logo.png" alt="Logo"></h1>
+            <h1><img src="../HTML y CSS PT1/banner/logo.png" alt="Logo"></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -51,7 +51,7 @@
 
             <fieldset>
                 <legend>¿En cual horario prefiere ser atendido?</legend>
-                <select name="" id="">
+                <select name="" id="comboBox">
                     <option value="">Mañana</option>
                     <option value="">Tarde</option>
                     <option value="">Noche</option>
@@ -90,7 +90,7 @@
     </main>
 
     <footer>
-        <img class="pie-de-pagina" src="../banner/logo-blanco.png" alt="">
+        <img class="pie-de-pagina" src="../HTML y CSS PT1/banner/logo-blanco.png" alt="">
         <p class="copyright">&copy Copyright Barbería Alura-2022</p>
     </footer>
 </body>
