--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header>
         <div class="caja">
-            <h1><img src="../banner/logo.png" alt="Logo"></h1>
+            <h1><img src="../HTML y CSS PT1/banner/logo.png" alt="Logo"></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -27,12 +27,12 @@
         </div>
     </header>
 
-    <img class="banner" src="../banner/banner.jpg" alt="barbería">
+    <img class="banner" src="../HTML y CSS PT1/banner/banner.jpg" alt="barbería">
 
     <main>
         <section class="principal">
             <h2 class="titulos-principal">Sobre la Barbería Alura</h2>
-            <img class="utensilios" src="../banner/utensilios.jpg" alt="utensilios">
+            <img class="utensilios" src="../HTML y CSS PT1/banner/utensilios.jpg" alt="utensilios">
             <p>Ubicada en el corazon de la ciudad, la <strong>barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y su barba. Fundada en 2020, la barbería Alura  ya es destaque en la ciduad y conquista nuevos clientes diariamente.</p> 
 
             <p id="mision"> <em>Nuestra mision es: <strong> "Porporcionar autoestima calidad de vida  a nuestros clientes".</strong></em> </p>
@@ -60,7 +60,7 @@
                     <li class="items">Puntualidad</li>
                     <li class="items">Limpieza</li>
 
-                </ul><img class="imgDife" src="../banner/diferenciales.jpg" alt="">
+                </ul><img class="imgDife" src="../HTML y CSS PT1/banner/diferenciales.jpg" alt="">
             </div>
             <div class="video">
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -71,7 +71,7 @@
     </main>
 
     <footer>
-        <img class="pie-de-pagina" src="../banner/logo-blanco.png" alt="">
+        <img class="pie-de-pagina" src="../HTML y CSS PT1/banner/logo-blanco.png" alt="">
         <p class="copyright">&copy Copyright Barbería Alura-2022</p>
     </footer>
 </body>
